--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.38/browser.min.js"></script>
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" />
     <script type="text/babel" src="%PUBLIC_URL%/js/app.js"></script>
 
     <!--
