--- a/public/contacts.html
+++ b/public/contacts.html
@@ -6,9 +6,10 @@
     <title>References</title>
     <style>
         /* Optional: Add some basic styling */
-        body { font-family: sans-serif; }
+        body { font-family: sans-serif; margin: 0 auto}
         ul { list-style-type: none; padding: 0; }
         li { margin-bottom: 10px; }
+        
     </style>
 </head>
 <body>
