--- a/public/contacts.html
+++ b/public/contacts.html
@@ -29,7 +29,7 @@
   Email: rsm59@psu.edu</p>
   
 <h2>Mary Bonk</h2>
-<p><b>Vice President of Advancement Project Management, Support, & Technology, IU Alumni Association</b>
+<p><b>Vice President of Advancement Project Management, Support, & Technology, IU Alumni Association</b><br />
   Phone: (812) 855-4990<br />
   Email: mbonk@iu.edu</p>
 
