--- a/public/contacts.html
+++ b/public/contacts.html
@@ -19,17 +19,17 @@
     <p>Thank you for taking the time to peruse my references.</p>
 
   <h2>Alexis Harmon</h2>
-  <p><b>Assistant Superintendent for Curriculum, Assessment, and Instruction, MCCSC</b><br />
+  <p><b>Assistant Superintendent for Curriculum, Instruction, and Assessment, <em>MCCSC</em></b><br />
   Phone: (812) 219-4946<br />
   Email: aharmon@mccsc.edu</p>
   
  <h2>Scott Myrick</h2>
-  <p><b>Lecturer, Director of Media Center Operations, Penn State University</b><br />
+  <p><b>Lecturer, Director of Media Center Operations, <em>Penn State University</em></b><br />
   Phone: (814) 865-3068<br />
   Email: rsm59@psu.edu</p>
   
 <h2>Mary Bonk</h2>
-<p><b>Vice President of Advancement Project Management, Support, & Technology, IU Alumni Association</b><br />
+<p><b>Vice President of Advancement Project Management, Support, & Technology,<em> IU Alumni Association</em></b><br />
   Phone: (812) 855-4990<br />
   Email: mbonk@iu.edu</p>
 
