--- a/public/contacts.html
+++ b/public/contacts.html
@@ -6,15 +6,23 @@
     <title>References</title>
     <style>
         /* Optional: Add some basic styling */
-        body { font-family: sans-serif; margin: 0 auto}
+        body { font-family: sans-serif;  display: grid;
+              place-items: center;
+              height: 100vh; }
+        ..center {
+         width: 50%;
+           height: 50%;
+
+        }
+        h1 { font-style: italic}
         ul { list-style-type: none; padding: 0; }
         li { margin-bottom: 10px; }
         
     </style>
 </head>
 <body>
-
-    <h1>References</h1>
+<div class="center">
+    <h1>References for Andrew Koop</h1>
 
     <p>Thank you for taking the time to peruse my references.</p>
 
@@ -33,7 +41,7 @@
   Phone: (812) 855-4990<br />
   Email: mbonk@iu.edu</p>
 
-  
+</div>
 
 </body>
 </html>
