--- a/public/contacts.html
+++ b/public/contacts.html
@@ -6,12 +6,14 @@
     <title>References</title>
     <style>
         /* Optional: Add some basic styling */
-        body { font-family: sans-serif;  display: grid;
+        body {   display: grid;
               place-items: center;
               height: 100vh; }
-        ..center {
+        .center {
+         font-family: sans-serif;
          width: 50%;
            height: 50%;
+           
 
         }
         h1 { font-style: italic}
@@ -37,7 +39,7 @@
   Email: rsm59@psu.edu</p>
   
 <h2>Mary Bonk</h2>
-<p><b>Vice President of Advancement Project Management, Support, & Technology,<em> IU Alumni Association</em></b><br />
+<p><b>VP of Advancement Project Management, Support, & Technology,<em> IU Alumni Association</em></b><br />
   Phone: (812) 855-4990<br />
   Email: mbonk@iu.edu</p>
 
