--- a/public/contacts.html
+++ b/public/contacts.html
@@ -33,26 +33,26 @@
     <p>Thank you for taking the time to peruse my references.</p>
 
  <div class="people">
-  <h2>Alexis Harmon</h2>
-  <p><b>Assistant Superintendent for Curriculum, Instruction, and Assessment</b><br />
+  <h2>Ms. Alexis Harmon</h2>
+  <p><b>Assistant Superintendent for Curriculum, Instruction, and Assessment (former supervisor)</b><br />
   Monroe County Community School Corporation (MCCSC)<br /><br />
   Phone: (812) 219-4946<br />
   Email: aharmon@mccsc.edu</p>
   
   <h2>Dr. Chris Finley</h2>
-    <p><b>Executive Director of Health, Safety, and Community Partnerships</b><br />
+    <p><b>Executive Director of Health, Safety, and Community Partnerships (current colleague)</b><br />
     Monroe County Community School Corporation (MCCSC) <br /><br />
     Phone: (812) 327-3892‬<br />
     Email: cfinley@mccsc.edu</p>
   
- <h2>Scott Myrick</h2>
-  <p><b>Lecturer, Director of Media Center Operations</b><br />
+ <h2>Mr. Scott Myrick</h2>
+  <p><b>Lecturer, Director of Media Center Operations (former colleague)</b><br />
       Penn State University<br /><br />
   Phone: (814) 865-3068<br />
   Email: rsm59@psu.edu</p>
   
-<h2>Mary Bonk</h2>
-<p><b>Vice President of Advancement Project Management, Support, and Technology</b><br />
+<h2>Ms. Mary Bonk</h2>
+<p><b>Vice President of Advancement Project Management, Support, and Technology (former department head)</b><br />
 IU Alumni Association<br /><br /><br />
   Phone: (812) 855-4990<br />
   Email: mbonk@iu.edu</p>
