chris title again

--- a/public/contacts.html
+++ b/public/contacts.html
@@ -40,7 +40,7 @@
   Email: aharmon@mccsc.edu</p>
   
   <h2>Dr. Chris Finley (he/him)</h2>
-    <p><b>Exec Dir of Coordinated School Services and Strategic Partnerships (current colleague)</b><br />
+    <p><b>Executive Director of Coordinated School Services and Strategic Partnerships (current colleague)</b><br />
     Monroe County Community School Corporation (MCCSC) <br /><br />
     Phone: (812) 327-3892‬<br />
     Email: cfinley@mccsc.edu</p>
