--- a/public/V334/evaluation/final-projects.html
+++ b/public/V334/evaluation/final-projects.html
@@ -32,7 +32,7 @@
 <body>
 	<header id="header" class="inner"><h1><a href="http://koop.ws/360/syllabus/bop.html">Building an Online Portfolio</a></h1>
 <nav id="main-nav"><ul class="main">
-	<li><a href="../syllabus/bop.html">Syllabus</a></li>
+<!--	<li><a href="../syllabus/bop.html">Syllabus</a></li> -->
 <li><a href="testimonials.html">Testimonials</a></li>
 <li><a href="">Projects</a></li>
 </ul>
