--- a/public/V334/evaluation/testimonials.html
+++ b/public/V334/evaluation/testimonials.html
@@ -42,7 +42,7 @@ p { padding: 10px }
 <body>
 	<header id="header" class="inner"><h1><a href="http://pages.iu.edu/~koop/360/syllabus/bop.html">Building an Online Portfolio</a></h1>
 <nav id="main-nav"><ul class="main">
-	<li><a href="../syllabus/bop.html">Syllabus</a></li>
+	<!--<li><a href="../syllabus/bop.html">Syllabus</a></li>-->
 <li><a href="testimonials.html">Testimonials</a></li>
 <li><a href="final-projects.html">Projects</a></li>
 </ul>
