--- a/public/currentOrg.html
+++ b/public/currentOrg.html
@@ -8,7 +8,7 @@
      <pre class="mermaid">
           graph TD
     A[Andrew Koop<br />Director of Technology]
-    A --> B[Patrick O'Neal <br />Assistant Director - Hardware and Support]
+    A --> B[Patrick O'Neal <br />Assistant Director of Technology]
     
     B --> C2[Michael Alvarez <br/>Network Engineer]
     A --> C3[Tyler Houin <br/>Safety Engineer]
@@ -19,7 +19,7 @@
     B --> C11[Nathan Wills <br />Engineer]
     A --> C6[Philip Knieriemen <br />Instructional Tech Coordinator]
     A --> C7[Jess Bolis <br />State Reporting Specialist]
-    A --> C8[William Scott <br />Applications Specialist ]
+   
     A --> C9[Thiam Cisse <br />Application Systems Manager]
     A --> C10[Tassie Gniady <br />Application Systems Manager ]
 
@@ -27,7 +27,8 @@
 
     %% Additional Level
    
-    C5 --> D3[Tiffany Vandever <br />HelpDesk]
+    A --> D3[Tiffany Vandever <br />HelpDesk]
+    A --> D2[William Scott <br />HelpDesk ]
     C5 --> D4[Building Technicians]
     C6 --> D5[Computer Coordinators]
     C7 --> D6[Admin Assistants]
