--- a/public/currentOrg.html
+++ b/public/currentOrg.html
@@ -2,7 +2,8 @@
     <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Mermaid Chart</title>
+        <meta name="robots" content="noindex">
+        <title>Current Org Chart</title>
     </head>
     <body>
      <pre class="mermaid">
