--- a/public/org.html
+++ b/public/org.html
@@ -30,7 +30,7 @@ function checkPassword() {
      <pre class="mermaid">
            graph TD
     A[Andrew Koop<br /><strong>Director of Technology</strong>]
-    A --> B1[Patrick O'Neal <br /><strong>Assistant Director - Hardware and Support</strong>]
+    A --> B1[Patrick O'Neal <br /><strong>Assistant Director - Engineering and Support</strong>]
     A --> B2[Vacant <br /><strong>Assistant Director - Data Operations</strong>]
    
     B1 --> C2[Michael Alvarez <br/><strong>Network Engineer</strong>]
