--- a/public/org.html
+++ b/public/org.html
@@ -73,7 +73,7 @@ function checkPassword() {
          <h3>Proposed Org Savings: $172,040</h3>
         <p>Staff Cuts: (2) Application Systems Managers, (1) Engineer</p>
         <p>Staff Adds: Assistant Director - Data Operations</p>
-        <p>Staff Reclass: Applications Specialist</p>
+        <p>Staff Reclass: 1 HelpDesk Analyst moving to Applications Specialist</p>
         </div>
         </div>
     </body>
