--- a/public/contacts.html
+++ b/public/contacts.html
@@ -40,10 +40,10 @@
   Email: aharmon@mccsc.edu</p>
   
   <h2>Dr. Chris Finley (he/him)</h2>
-    <p><b>Executive Director of Coordinated School Services and Strategic Partnerships (current colleague)</b><br />
+    <p><b>Assistant Superintendent (former colleague)</b><br />
     Monroe County Community School Corporation (MCCSC) <br /><br />
     Phone: (812) 327-3892‬<br />
-    Email: cfinley@mccsc.edu</p>
+    Email: cmfinley@avon-schools.org</p>
   
  <h2>Mr. Scott Myrick (he/him)</h2>
   <p><b>Lecturer, Director of Media Center Operations (former colleague)</b><br />
