--- a/public/contacts.html
+++ b/public/contacts.html
@@ -41,7 +41,7 @@
   
   <h2>Dr. Chris Finley (he/him)</h2>
     <p><b>Assistant Superintendent (former colleague)</b><br />
-    Monroe County Community School Corporation (MCCSC) <br /><br />
+    Avon Schools<br /><br />
     Phone: (812) 327-3892‬<br />
     Email: cmfinley@avon-schools.org</p>
   
