--- a/public/org.html
+++ b/public/org.html
@@ -70,10 +70,10 @@ function checkPassword() {
             import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs';
         </script>
          <div class = "cap">
-         <h3>Proposed Org Savings: $172,040</h3>
-        <p>Staff Cuts: (2) Application Systems Managers, (1) Engineer</p>
-        <p>Staff Adds: Assistant Director - Data Operations</p>
-        <p>Staff Reclass: 1 HelpDesk Analyst moving to Applications Specialist</p>
+         <!--<h3>Proposed Org Savings: $172,040</h3>-->
+        <p>Staff Cuts: (1) Engineer, (1) HelpDesk </p>
+        <p>Staff Adds: (1) Engineer/Application Systems Manager (Skyward-focused)</p>
+       
         </div>
         </div>
     </body>
