--- a/public/org.html
+++ b/public/org.html
@@ -31,17 +31,17 @@ function checkPassword() {
            graph TD
     A[Andrew Koop<br /><strong>Director of Technology</strong>]
     A --> B1[Patrick O'Neal <br /><strong>Assistant Director - Engineering and Support</strong>]
-    A --> B2[Vacant <br /><strong>Assistant Director - Data Operations</strong>]
+   <!-- A B2[Vacant <br /><strong>Assistant Director - Data Operations</strong>] -->
    
     B1 --> C2[Michael Alvarez <br/><strong>Network Engineer</strong>]
     B1 --> C3[Tyler Houin <br/><strong>Safety Engineer</strong>]
     B1 --> C4[Keith Meyer <br/><strong>Hardware Manager</strong>]
     B1 --> C5[John Walker <br/><strong>Support Coordinator</strong>]
 
-    B2 --> C1[Timmy Sprowl <br /><strong>Hardware and App Engineer</strong>]
-    B2 --> C6[Philip Knieriemen <br /><strong>Instructional Tech Coordinator</strong>]
-    B2 --> C7[Jess Bolis <br /><strong>State Reporting Specialist</strong>]
-    B2 --> C8[William Scott <br /><strong>Applications Specialist</strong> ]
+    B1 --> C1[Timmy Sprowl <br /><strong>Hardware and App Engineer</strong>]
+    B1 --> C6[Philip Knieriemen <br /><strong>Instructional Tech Coordinator</strong>]
+    B1 --> C7[Jess Bolis <br /><strong>State Reporting Specialist</strong>]
+    B1 --> C8[William Scott <br /><strong>Applications Specialist</strong> ]
 
    
 
