--- a/public/org.html
+++ b/public/org.html
@@ -40,7 +40,7 @@ function checkPassword() {
     B1 --> C1[Timmy Sprowl <br /><strong>Hardware and App Engineer</strong>]
     B1 --> C6[Philip Knieriemen <br /><strong>Instructional Tech Coordinator</strong>]
     B1 --> C7[Jess Bolis <br /><strong>State Reporting Specialist</strong>]
-    B1 --> C8[William Scott <br /><strong>Applications Specialist</strong> ]
+    B1 --> C8[William Scott <br /><strong>Applications Engineer</strong> ]
 
    
 
